[gd_scene load_steps=10 format=3 uid="uid://cp3jlic4qi076"]

[ext_resource type="Texture2D" uid="uid://wdi7id6fbtjw" path="res://assets/icons/play.svg" id="1_e8brx"]
[ext_resource type="Script" path="res://scenes/game_view/data_section.gd" id="1_gsq0a"]
[ext_resource type="Texture2D" uid="uid://bpc5bvt0atvj2" path="res://assets/placeholders/star_unfilled.png" id="2_m5e4t"]
[ext_resource type="Texture2D" uid="uid://c4ue7fi0lkyb3" path="res://assets/placeholders/star_filled.png" id="3_dh6jp"]
[ext_resource type="Texture2D" uid="uid://uvm6vlcgyvyk" path="res://assets/placeholders/favorite_normal.png" id="4_e7quj"]
[ext_resource type="Texture2D" uid="uid://bxqkgayfuyyu3" path="res://assets/placeholders/favorite_pressed.png" id="5_dpu8r"]
[ext_resource type="Script" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="7_u0kaw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5yej"]
bg_color = Color(0.219608, 0.219608, 0.219608, 0.886275)

[sub_resource type="LabelSettings" id="LabelSettings_jlgt7"]
font_size = 18

[node name="Data" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_gsq0a")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b5yej")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Play" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Play "
icon = ExtResource("1_e8brx")
expand_icon = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayDate" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
text = "Last played on: %s"

[node name="PlayCount" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
text = "Play count: %d"

[node name="NumPlayers" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Number of players: %s"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Rating: "

[node name="Rating" type="TextureProgressBar" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.65
nine_patch_stretch = true
texture_under = ExtResource("2_m5e4t")
texture_progress = ExtResource("3_dh6jp")

[node name="Favorite" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("4_e7quj")
texture_pressed = ExtResource("5_dpu8r")
ignore_texture_size = true
stretch_mode = 5

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Developer" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Developer: %s"
label_settings = SubResource("LabelSettings_jlgt7")
autowrap_mode = 3

[node name="Publisher" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Publisher: %s"
label_settings = SubResource("LabelSettings_jlgt7")
autowrap_mode = 3

[node name="Genres" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Genre: %s"
label_settings = SubResource("LabelSettings_jlgt7")
autowrap_mode = 3

[node name="ReleaseDate" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Release date: %s"
label_settings = SubResource("LabelSettings_jlgt7")
autowrap_mode = 3

[node name="SmoothScrollContainer" type="ScrollContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("7_u0kaw")
allow_horizontal_scroll = false

[node name="Description" type="Label" parent="VBoxContainer/VBoxContainer/SmoothScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
text = "Game details"
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/Favorite" to="." method="_on_favorite_toggled"]
